[project]
name = "optimization-ml"
version = "0.1.0"
description = ""
authors = [{ name = "Gongapshev", email = "contact@gongapshev.as" }]
readme = "README.md"

# ВАЖНО: ограничиваем верхнюю границу Python, чтобы не заходить в 3.15+
# (PyTorch 2.9 -> triton 3.5 требует <3.15)
requires-python = ">=3.11,<3.15"

dependencies = [
  "numpy>=2.1,<3",
  "pandas>=2.2,<3",
  "scipy>=1.14,<2",
  "scikit-learn>=1.5,<2",
  "matplotlib>=3.9,<4",
  "seaborn>=0.13,<1",
  "statsmodels>=0.14,<1",
  "jupyter>=1.1,<2",
  "ipykernel>=6.29,<7",
  "joblib>=1.4,<2",
  "numba>=0.60,<1",
  "optuna>=3.6,<4",
  "kagglehub>=0.3.13,<0.4.0",
  "torch>=2.9,<3",
  "keras (>=3.11.3,<4.0.0)",
  "tensorflow (>=2.20.0,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
